# k8s-security

./: Cargo.toml  Dockerfile  README.md  compose.yaml  justfile
.github/workflows/: helm_checks.yaml  main.yaml  reusable-docker.yaml
charts/: helmfile.apps.yaml  helmfile.infra.yaml
charts/kubernetes_yaml/falco/: trigger-rule.yaml
charts/kubernetes_yaml/kyverno/: add-default-securitycontext.cpol.yaml  add-istio-mesh-ns.cpol.yaml  check-images.cpol.yaml  require-requests-limits.cpol.yaml
charts/kubernetes_yaml/kyverno/tests/: invalid-pod-image.yaml  invalid-pod-requests-limits.yaml  invalid-svc-nodeport.yaml  mutate-pod-security-context.yaml  valid-pod.yaml  valid-svc-clusterip.yaml
charts/mfernd-k8s-security/: Chart.yaml
charts/sentences-demo-app/: Chart.yaml  values.yaml
charts/sentences-demo-app/templates/: peerauth.istio_policy.yaml
charts/sentences-demo-app/templates/aggregator/: deployment.yaml  gateway.yaml  service.yaml
charts/sentences-demo-app/templates/provider/: deployment.yaml
crates/aggregator-svc/: Cargo.toml  workers_config.example.toml
crates/aggregator-svc/src/: lib.rs  main.rs  workers_config.rs
crates/common/: Cargo.toml
crates/common/src/: app_service.rs  lib.rs  routes.rs  word_kind.rs
crates/provider-svc/: Cargo.toml
crates/provider-svc/src/: kind.rs  lib.rs  main.rs  words.rs
helm/: values.yaml
helm/templates/aggregator/: configmap.yaml  deployment.yaml  service.yaml
helm/templates/provider/: deployment.yaml  service.yaml
