[workspace]
members = ["crates/common", "crates/aggregator-svc", "crates/provider-svc"]
resolver = "2"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.dependencies]
axum = { version = "0.7", features = ["json", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["attributes"] }
