[package]
name = "aggregator-svc"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
axum = { workspace = true }
common = { path = "../common" }
futures = "0.3"
rand = { workspace = true }
reqwest = { workspace = true }
serde = { version = "1", features = ["derive"] }
tokio = { workspace = true }
toml = "0.8"
tracing = { workspace = true }
