[package]
name = "common"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
axum = { workspace = true }
reqwest = { version = "0.12" }
tokio = { workspace = true }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = { workspace = true }
tracing-subscriber = "0.3"
